completed supplemental requirement 2
